k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desafio-k8s
  labels:
    app.kubernetes.io/part-of: k8s-postgrest-challenge
