k8s/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: desafio-k8s
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: k8s-postgrest-challenge
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
