k8s/07-postgrest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: desafio-k8s
spec:
  selector:
    app: postgrest
  ports:
    - port: 3000
      targetPort: 3000
